--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="terminal.png" type="image/x-icon">
     <style>      
-        ::-webkit-scrollbar {
+      ::-webkit-scrollbar {
         width: 4.5px;
       }
       ::-webkit-scrollbar-track {
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-<body>
+<body style="overflow-y: hidden;">
     <div id="terminal-container">
         <div id="terminal">
             <div id="terminal-output"></div>
