--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="terminal.png" type="image/x-icon">
     <style>      
       ::-webkit-scrollbar {
+        height: 0px;
         width: 4.5px;
       }
       ::-webkit-scrollbar-track {
@@ -25,7 +26,7 @@
     </style>
 </head>
 
-<body style="overflow-y: hidden;">
+<body>
     <div id="terminal-container">
         <div id="terminal">
             <div id="terminal-output"></div>
